crates/dsql-core/tests/it/snapshots/it__completions__spread_offers_matching_fragments.snap
---
source: crates/dsql-core/tests/it/completions.rs
expression: "completions(\"fragment UserBits on users {\\n  id\\n}\\nfragment PostBits on posts {\\n  id\\n}\\nquery Q {\\n  users {\\n    ...|\\n  }\\n}\\n\").await"
---
Fragment UserBits (fragment on users)
