crates/dsql-core/tests/it/snapshots/it__completions__where_after_anchor_offers_columns.snap
---
source: crates/dsql-core/tests/it/completions.rs
expression: "completions(\"query Q {\\n  users(where .|) {\\n    id\\n  }\\n}\\n\").await"
---
Column created_at (timestamptz)
Column email (text)
Column id (uuid)
Column name (text)
Scope . (current scope)
Scope .. (parent scope)
Scope ~ (root scope)
