crates/dsql-core/tests/it/snapshots/it__completions__where_after_path_offers_operators.snap
---
source: crates/dsql-core/tests/it/completions.rs
expression: "completions(\"query Q {\\n  users(where .id |) {\\n    id\\n  }\\n}\\n\").await"
---
Column created_at (timestamptz)
Column email (text)
Column id (uuid)
Column name (text)
Scope . (current scope)
Scope .. (parent scope)
Scope ~ (root scope)
Operator !=
Operator <
Operator <=
Operator ==
Operator >
Operator >=
Keyword and
Keyword asc
Keyword desc
Keyword like
Keyword limit
Keyword offset
Keyword or
Keyword order
Keyword where
