crates/dsql-core/tests/it/snapshots/it__completions__where_offers_scopes_columns_and_literals.snap
---
source: crates/dsql-core/tests/it/completions.rs
expression: "completions(\"query Q {\\n  users(where |) {\\n    id\\n  }\\n}\\n\").await"
---
Column created_at (timestamptz)
Column email (text)
Column id (uuid)
Column name (text)
Scope . (current scope)
Scope .. (parent scope)
Scope ~ (root scope)
Keyword false
Keyword null
Keyword true
